--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -18,12 +18,10 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <p>já me livrei da maldição</p>
-    <script>
 
-        alert("Minha Primeira Mensagem");
-        confirm("esta gostando de javascript?");
-        prompt("Qual é o seu nome?") 
-        
+    <script>
+        var nome = prompt("Qual é o seu nome?")
+        window.alert ("é um grande prazer te conhecer, " + nome + "!")
     </script>
 </body>
 </html>
