--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -18,12 +18,12 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <p>já me livrei da maldição</p>
-    <script>
 
-        alert("Minha Primeira Mensagem");
-        confirm("esta gostando de javascript?");
-        prompt("Qual é o seu nome?") 
-        
+    <script>1
+        var n1 = Number(window.prompt ("Digite um Número"))
+        var n2 = Number(window.prompt ("Certo... Agora Digite outro Número"))
+        var soma = n1+n2
+        window.alert(`A soma entre ${n1} e ${n2} é: ${soma}`)
     </script>
 </body>
 </html>
