--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primiro Programa</title>
+    <title>Meu primeiro Programa</title>
     <style>
         body {
             background-color: rgb(86, 86, 248);
