--- a/desafios/desafio1/index.html
+++ b/desafios/desafio1/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body onload="carregar()">
     <h1> Hora do dia </h1>
 
     <div class="container-pai">
-        <p id="desc">aaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-        <div id="img">
-
-        </div>
+        <p id="msg">aaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+        <div id="div-foto">
+            <img src="imagens/dia.jpg" alt="Dia" id="imagem">
+        </div> 
     </div>
 </body>
 </html>
