--- a/desafios/desafio1/index.html
+++ b/desafios/desafio1/index.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DESAFIO 1</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body onload="carregar()">
-    <h1> Hora do dia </h1>
-
-    <div class="container-pai">
-        <p id="msg">aaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-        <div id="div-foto">
-            <img src="imagens/dia.jpg" alt="Dia" id="imagem">
-        </div> 
-    </div>
+    <header>
+        <h1> Hora do dia </h1>
+    </header>
+    <section>
+        <div id="msg">
+            aqui vai aparecer a mensagem
+        </div>
+        <div id="foto">
+            <img src="" alt="foto do dia" id="imagem">
+        </div>
+    </section>
+    <footer>
+        <p>&copy; Thiago Santos</p>
+    </footer>
+    <script src="script.js"> </script>
 </body>
 </html>
