--- a/desafios/desafio2/index.html
+++ b/desafios/desafio2/index.html
@@ -7,48 +7,26 @@
     <link rel="stylesheet" href="css-global.css">
     <script src="script.js"></script>
 </head>
-<body onload="carregar()">
+<body>
     <h1>Verificador de Idade</h1>
     <div class="container-global">
 
-        <div class="container-txt">
-            <label for="txtdataNas">Ano de Nascimento:</label>
-            <input type="text" id="txtdataNas" required maxlength="4">
+        <div class="Nascimento">
+            <label for="dataDeNascimento">Ano de Nascimento:</label>
+            <input type="text" id="dataDeNascimento" required maxlength="4">
         </div>
 
-        <div class="gen">
-            <input type="radio" name="genero" id="txtgenF">
-            <label for="txtgenF">Feminino</label>
+        <div class="Genero">
+            <input type="radio" name="sex" id="feminino">
+            <label for="feminino">Feminino</label>
 
-            <input type="radio" name="genero" id="txtgenM">
-            <label for="txtgenM">Masculino</label>
+            <input type="radio" name="sex" id="masculino">
+            <label for="masculino">Masculino</label>
         </div>
+         <p id="res">Resultado:</p>
+        <input type="submit" value="Verificar" id="botao" onclick="verificar()">
 
-        <input type="submit" value="Verificar" onclick="verificar()" id="botao">
-
-        <p id="msg">Resultado:</p>
-        <div class="container-img">
-            <img src="" alt="" id="imagem">
-        </div>
-
+       
     </div>
-
-
-    <script>
-        let agora = new Data()
-        let anoAtual = agora.getFullYear()
-        let anoNas = document.getElementsByClassName("txtdataNas").value;
-        let sexo = document.getElementsById("txtgenF").value.toLowerCase();
-
-        function verificar() {
-            let idade = anoNas - anoAtual;
-
-            if ( sexo == "mulher" ) {
-            res.innerHTML(`voce é uma mulher de ${idade} anos de idade`)
-            } else {
-            res.innerHTML(`voce é um homem de ${idade} anos de idade`)
-            }
-        }
-    </script>
 </body>
 </html>
