--- a/desafios/desafio2/index.html
+++ b/desafios/desafio2/index.html
@@ -17,13 +17,16 @@
         </div>
 
         <div class="Genero">
-            <input type="radio" name="sex" id="feminino">
+            <input type="radio" name="sex" id="feminino" required>
             <label for="feminino">Feminino</label>
 
-            <input type="radio" name="sex" id="masculino">
+            <input type="radio" name="sex" id="masculino" required>
             <label for="masculino">Masculino</label>
         </div>
-        <p id="res">Resultado:</p>
+        <div class="resultado">
+            <p id="res">Resultado:</p>
+        </div>
+        <img src="" alt="" id="imagem"><br>
         <input type="submit" value="Verificar" id="botao" onclick="verificar()">
     </div>
 </body>
