--- a/desafios/desafio2/index.html
+++ b/desafios/desafio2/index.html
@@ -13,14 +13,14 @@
 
         <div class="Nascimento">
             <label for="dataDeNascimento">Ano de Nascimento:</label>
-            <input type="text" id="dataDeNascimento" required maxlength="4">
+            <input type="number" id="dataDeNascimento" required maxlength="4">
         </div>
 
         <div class="Genero">
-            <input type="radio" name="sex" id="feminino" required>
+            <input type="radio" name="sex" id="feminino">
             <label for="feminino">Feminino</label>
 
-            <input type="radio" name="sex" id="masculino" required>
+            <input type="radio" name="sex" id="masculino">
             <label for="masculino">Masculino</label>
         </div>
         <div class="resultado">
